# agent_vis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  showcase.py
frontend/: app.js  index.html  styles.css
server/: __init__.py  main.py  models.py  workflows.py
src/agent_vis/: __init__.py  app.py  config.py  exceptions.py  models.py  store.py
tests/: conftest.py  test_api.py  test_e2e.py
