[project]
name = "agent-vis"
version = "0.1.0"
description = "Workflow visualization with real-time flow animations"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
